# transitive_shared_libs

./: README.md  WORKSPACE  bazel.sh  debug.bzl
base_shared/: BUILD.bazel  base_shared.cpp  base_shared.h
cc/: aspect_helpers.bzl  attribute_manipulations.bzl  copy_dynamic_libraries_to_binary.bzl  defs.bzl
executable/: BUILD.bazel  hello_world.cpp
middle_shared/: BUILD.bazel  middle_shared.cpp  middle_shared.h
